코드검토 작업중!

--- a/pre-build/html/layout/layout-flex.html
+++ b/pre-build/html/layout/layout-flex.html
@@ -331,7 +331,7 @@
                                 </ul>
                             </div>
 
-                            <!-- <div class="tabCont active">
+                            <div class="tabCont active">
                                 <div class="highlightArea cScroll">
                                     <pre>
                                 <code class="language-html">
@@ -393,7 +393,7 @@
                                         </code>
                                     </pre>
                                 </div>
-                            </div> -->
+                            </div>
                         </div>
                         <div class="btnArea end">
                             <button type="button" class="button Bgblue btnResult">
@@ -449,374 +449,6 @@
                             <div class="flexItem"></div>
                             <div class="flexItem"></div>
                             <div class="flexItem"></div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="resultCont">
-                    <div class="titleH3">
-                        <h3>flex-direction</h3>
-                    </div>
-                    <div class="container">
-                        <div class="tagGroup">
-                            <span class="tag default">row</span>
-                        </div>
-                        <div class="flexArea fd-row">
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">column</span>
-                        </div>
-                        <div class="flexArea fd-col">
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">row-reverse</span>
-                        </div>
-                        <div class="flexArea fd-row-re">
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">column-reverse</span>
-                        </div>
-                        <div class="flexArea fd-col-re">
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="resultCont">
-                    <div class="titleH3">
-                        <h3>display : justify-content</h3>
-                    </div>
-                    <div class="container">
-
-                        <div class="tagGroup">
-                            <span class="tag gray">center</span>
-                        </div>
-                        <div class="flexArea jc-center">
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">flex-start</span>
-                        </div>
-                        <div class="flexArea jc-start">
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">flex-end</span>
-                        </div>
-                        <div class="flexArea jc-end">
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">space-between</span>
-                        </div>
-                        <div class="flexArea jc-between">
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">space-around</span>
-                        </div>
-                        <div class="flexArea jc-around">
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">space-evenly</span>
-                        </div>
-                        <div class="flexArea jc-evenly">
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="resultCont">
-                    <div class="titleH3">
-                        <h3>display : align-items</h3>
-                    </div>
-                    <div class="container">
-
-                        <div class="tagGroup">
-                            <span class="tag gray">center</span>
-                        </div>
-                        <div class="flexArea ai-center">
-                            <div class="flexItem">
-                                <span>Item</span>
-                            </div>
-                            <div class="flexItem">
-                                <span>Item</span>
-                            </div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">flex-start</span>
-                        </div>
-                        <div class="flexArea ai-start">
-                            <div class="flexItem">
-                                <span>Item</span>
-                            </div>
-                            <div class="flexItem">
-                                <span>Item</span>
-                            </div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">flex-end</span>
-                        </div>
-                        <div class="flexArea ai-end">
-                            <div class="flexItem">
-                                <span>Item</span>
-                            </div>
-                            <div class="flexItem">
-                                <span>Item</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="resultCont">
-                    <div class="titleH3">
-                        <h3>flex-basis</h3>
-                    </div>
-                    <div class="container">
-
-                        <div class="tagGroup">
-                            <span class="tag default">flex-basis: auto</span>
-                        </div>
-
-                        <div class="flexArea flex-width fe-basis-d">
-                            <div class="flexItem"></div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">flex-basis: 600px (row)</span>
-                        </div>
-
-                        <div class="flexArea flex-width fe-basis">
-                            <div class="flexItem"></div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">flex-basis: 600px (column)</span>
-                        </div>
-
-                        <div class="flexArea flex-width fe-basis fd-col">
-                            <div class="flexItem"></div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="resultCont">
-                    <div class="titleH3">
-                        <h3>flex-grow</h3>
-                    </div>
-                    <div class="container">
-
-                        <div class="tagGroup">
-                            <span class="tag default">flex-grow: 0</span>
-                        </div>
-                        <div class="flexArea flex-width fe-grow-d">
-                            <div class="flexItem"></div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">flex-grow: 1</span>
-                        </div>
-                        <div class="flexArea flex-width fe-grow">
-                            <div class="flexItem"></div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="resultCont">
-                    <div class="titleH3">
-                        <h3>flex-shrink</h3>
-                    </div>
-                    <div class="container">
-
-                        <div class="tagGroup">
-                            <span class="tag default">flex-shrink: 1</span>
-                        </div>
-                        <div class="flexArea flex-width fe-shrink-d">
-                            <div class="flexItem"></div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">flex-shrink: 0</span>
-                        </div>
-                        <div class="flexArea flex-width fe-shrink">
-                            <div class="flexItem"></div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="resultCont">
-                    <div class="titleH3">
-                        <h3>flex</h3>
-                    </div>
-                    <div class="container">
-
-                        <div class="tagGroup">
-                            <span class="tag gray">flex: 1</span>
-                        </div>
-                        <div class="flexArea flex-width flex1">
-                            <div class="flexItem"></div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">flex: 0.5</span>
-                        </div>
-                        <div class="flexArea flex-width flex-dp">
-                            <div class="flexItem"></div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="resultCont">
-                    <div class="titleH3">
-                        <h3>flex-wrap</h3>
-                    </div>
-                    <div class="container">
-
-                        <div class="tagGroup">
-                            <span class="tag default">nowrap</span>
-                        </div>
-                        <div class="flexArea ai-center itemCt flex-width fe-wrap-d">
-                            <div class="flexItem">
-                                <span>Item01</span>
-                            </div>
-                            <div class="flexItem">
-                                <span>Item02</span>
-                            </div>
-                            <div class="flexItem">
-                                <span>Item03</span>
-                            </div>
-                            <div class="flexItem">
-                                <span>Item04</span>
-                            </div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">wrap</span>
-                        </div>
-                        <div class="flexArea ai-center itemCt flex-width fe-wrap">
-                            <div class="flexItem">
-                                <span>Item01</span>
-                            </div>
-                            <div class="flexItem">
-                                <span>Item02</span>
-                            </div>
-                            <div class="flexItem">
-                                <span>Item03</span>
-                            </div>
-                            <div class="flexItem">
-                                <span>Item04</span>
-                            </div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">wrap-reverse</span>
-                        </div>
-                        <div class="flexArea ai-center itemCt flex-width fe-wrap-re">
-                            <div class="flexItem">
-                                <span>Item01</span>
-                            </div>
-                            <div class="flexItem">
-                                <span>Item02</span>
-                            </div>
-                            <div class="flexItem">
-                                <span>Item03</span>
-                            </div>
-                            <div class="flexItem">
-                                <span>Item04</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="resultCont">
-                    <div class="titleH3">
-                        <h3>gap (flex)</h3>
-                    </div>
-                    <div class="container">
-
-                        <div class="tagGroup">
-                            <span class="tag gray">gap: 20px</span>
-                        </div>
-                        <div class="flexArea flex-width g20 flexWrap flexAdj">
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">row-gap: 20px</span>
-                        </div>
-                        <div class="flexArea flex-width row-g20 flexWrap flexAdj">
-                            <div class="flexItem"></div>
-                            <div class="flexItem bgGray"></div>
-                            <div class="flexItem"></div>
-                            <div class="flexItem bgGray"></div>
-                        </div>
-
-                        <div class="tagGroup">
-                            <span class="tag gray">column-gap: 20px</span>
-                        </div>
-                        <div class="flexArea flex-width col-g20 flexWrap flexAdj">
-                            <div class="flexItem"></div>
-                            <div class="flexItem"></div>
-                            <div class="flexItem bgGray"></div>
-                            <div class="flexItem bgGray"></div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="resultCont">
-                    <div class="titleH3">
-                        <h3>order</h3>
-                    </div>
-                    <div class="container">
-
-                        <div class="flexArea fe-order ai-center itemCt flex-width">
-                            <div class="flexItem">
-                                <span>Item01</span>
-                            </div>
-                            <div class="flexItem">
-                                <span>Item02</span>
-                            </div>
-                            <div class="flexItem">
-                                <span>Item03</span>
-                            </div>
-                            <div class="flexItem">
-                                <span>Item04</span>
-                            </div>
                         </div>
                     </div>
                 </div>
