--- a/pre-build/scss/common/component.scss
+++ b/pre-build/scss/common/component.scss
@@ -333,6 +333,11 @@ svg{fill: currentColor;
 overflow-y: auto; background-color: var(--d-bg-left-menu); z-index: 1100;
   >.leftMenu{
     >li{position: relative; cursor: pointer;
+      &:nth-of-type(4){
+        .leftSubMenu li:nth-of-type(2).twoLine{
+          a{white-space: normal;}
+        }
+      }
       a{display: block;}
       &:first-child >a{padding: 16px 0; text-indent: 28px; 
       border-bottom: 1px solid var(--d-bdc);}
@@ -711,7 +716,7 @@ background-color: rgba($color: $blackBg, $alpha: 0.65);
   &.middle{display: flex; align-items: center; justify-content: center; height: inherit;} //container: height 100%
 }
 
-.btnDataDownload{
+.btnDataDownload{display: flex; align-items: center;
   svg{margin-top: 2px;}
 }
 
