--- a/pre-build/html/layout/layout-centerEle.html
+++ b/pre-build/html/layout/layout-centerEle.html
@@ -321,39 +321,24 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-html">
-&lt;div class="resultCont type01"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;Flex를 이용한 가운데 정렬&lt;/h3&gt;
+&lt;div id="wrap"&gt;
+  &lt;div class="container type01"&gt;
+    &lt;div class="centerBox"&gt;
+          &lt;span&gt;가운데 정렬&lt;/span&gt;
     &lt;/div&gt;
-    &lt;div class="container"&gt;
-        &lt;div class="centerBox"&gt;
+  &lt;/div&gt;
+  &lt;div class="container type02"&gt;
+    &lt;div class="centerBox"&gt;
+          &lt;span&gt;가운데 정렬&lt;/span&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+  &lt;div class="contBox"&gt;
+    &lt;div class="container type03"&gt;
+      &lt;div class="centerBox"&gt;
             &lt;span&gt;가운데 정렬&lt;/span&gt;
-        &lt;/div&gt;
+      &lt;/div&gt;
     &lt;/div&gt;
-&lt;/div&gt;
-
-&lt;div class="resultCont type02"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;Flex + vh를 이용한 가운데 정렬&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;div class="container"&gt;
-        &lt;div class="innerBox"&gt;
-            &lt;div class="centerBox"&gt;
-                &lt;span&gt;가운데 정렬&lt;/span&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-    &lt;/div&gt;
-&lt;/div&gt;
-
-&lt;div class="resultCont type03"&gt;
-    &lt;div class="titleH3"&gt;
-        &lt;h3&gt;position을 이용한 가운데 정렬&lt;/h3&gt;
-    &lt;/div&gt;
-    &lt;div class="container"&gt;
-        &lt;div class="centerBox"&gt;
-            &lt;span&gt;가운데 정렬&lt;/span&gt;
-        &lt;/div&gt;
-    &lt;/div&gt;
+  &lt;/div&gt;
 &lt;/div&gt;
                               </code>
                             </pre>
@@ -364,19 +349,14 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-scss">
-.resultCont{position: relative; padding: 50px; box-sizing: border-box;
-    &.type01{height: 100%; 
-        .container{height: 100%; display: flex; align-items: center; justify-content: center;}
-    }
-    &.type02{
-        .innerBox{display: flex; align-items: center; justify-content: center; height: 100vh;
-    }
-    }
-    &.type03{height: 100%;
-        .container{position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);}
-    }
+#wrap{height: 100%;
+  .container{
+    &.type01{height: 100%; display: flex; align-items: center; justify-content: center;}
+    &.type02{display: flex; align-items: center; justify-content: center; height: 100vh;}
+    &.type03{position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%);}
+  }
 }
-.titleH3{margin-bottom: 0; padding-bottom: 10px;}
+.contBox{position: relative; height: 100%;}
 .centerBox{padding: 50px; border: 2px solid #000; font-size: 22px; font-family: 'Noto Sans';}
                               </code>
                           </pre>
@@ -387,44 +367,42 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-css">
-.resultCont {
-    position: relative;
-    padding: 50px;
-    box-sizing: border-box;
+#wrap{
+  height: 100%;
 }
 
-.resultCont.type01 {
-    height: 100%;
+#wrap .container.type01 {
+  height: 100%; 
+  display: flex;
+  -webkit-box-align: center;
+     -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+     -ms-flex-pack: center;
+  justify-content: center;
 }
 
-.resultCont.type01 .container {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#wrap .container.type02 {
+  display: flex;
+  -webkit-box-align: center;
+     -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+     -ms-flex-pack: center;
+  justify-content: center; 
+  height: 100vh;
 }
 
-.resultCont.type02 .innerBox {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+#wrap .container.type03 {
+  position: absolute; 
+  top: 50%; 
+  left: 50%; 
+  transform: translate(-50%,-50%);
 }
 
-.resultCont.type03 {
-    height: 100%;
-}
-
-.resultCont.type03 .container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.titleH3 {
-    margin-bottom: 0;
-    padding-bottom: 10px;
+.contBox{
+  position: relative;
+  height: 100%;
 }
 
 .centerBox {
