--- a/pre-build/scss/common/component.scss
+++ b/pre-build/scss/common/component.scss
@@ -455,7 +455,7 @@ overflow-y: auto; background-color: var(--d-bg-left-menu); z-index: 1100;
       .overflowDiv{width: 100%; height: 200px;}
     }
     .textBox{
-      p{color: var(--c-333-white);
+      p{color: var(--c-333-white); font-family: 'Noto Sans';
         &.eps{width: 350px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap;}
       }
       label{font-family: $d-fz; color: var(--c-333-white);}
