--- a/pre-build/scss/scss-build/component.css
+++ b/pre-build/scss/scss-build/component.css
@@ -977,6 +977,7 @@ svg.darkType {
 
 .resultArea .inner .textBox p {
   color: var(--c-333-white);
+  font-family: 'Noto Sans';
 }
 
 .resultArea .inner .textBox p.eps {
