--- a/pre-build/scss/common/component.scss
+++ b/pre-build/scss/common/component.scss
@@ -261,24 +261,24 @@ svg{fill: currentColor;
 #wrap{width: 100%; height: 100%;
   &.scrollHidden{overflow: hidden;}
   .mainTxt{color: var(--d-c-text);}
-  &.main{position: relative; transition: .5s; background-color: #4e4e4e;
-    .logo a{display: block; width: 800px; height: 136px; transition: .5s ease-in-out;
-    background: url("../../images/common/main-logo-g.png") no-repeat center;
-      &.change{background: url("../../images/common/main-logo-w.png") no-repeat center;}
-    } 
-    .centerArea{position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); text-align: center;}
-    .btnStart{position: relative; display: inline-block; width: 170px; height: 56px; box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
-    background-color: rgba($color: $whiteBg, $alpha: 0.5); transform: perspective(1px) translateZ(0); 
-      span{position: relative; font-size: 1.38em; font-family: $d-fz; transition: .3s;
-      color: $cfff; letter-spacing: 6.6px;
-        &:after{content: ''; position: absolute; top: 6px; right: -30px; min-width: 20px; height: 20px; transition: .3s;}
-      }
-      &:before{content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: -1;
-      transform: scaleX(0); transform-origin: 0 50%;  transition-duration: 0.3s; transition-property: transform; 
-      transition-timing-function: ease-out; background: $whiteBg;}
-    }
-    &.blue{background: #1694d2; transition: .5s ease-in-out;}
-  }
+  // &.main{position: relative; transition: .5s; background-color: #4e4e4e;
+  //   .logo a{display: block; width: 800px; height: 136px; transition: .5s ease-in-out;
+  //   background: url("../../images/common/main-logo-g.png") no-repeat center;
+  //     &.change{background: url("../../images/common/main-logo-w.png") no-repeat center;}
+  //   } 
+  //   .centerArea{position: absolute; top: 50%; left: 50%; transform: translate(-50%,-50%); text-align: center;}
+  //   .btnStart{position: relative; display: inline-block; width: 170px; height: 56px; box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+  //   background-color: rgba($color: $whiteBg, $alpha: 0.5); transform: perspective(1px) translateZ(0); 
+  //     span{position: relative; font-size: 1.38em; font-family: $d-fz; transition: .3s;
+  //     color: $cfff; letter-spacing: 6.6px;
+  //       &:after{content: ''; position: absolute; top: 6px; right: -30px; min-width: 20px; height: 20px; transition: .3s;}
+  //     }
+  //     &:before{content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: -1;
+  //     transform: scaleX(0); transform-origin: 0 50%;  transition-duration: 0.3s; transition-property: transform; 
+  //     transition-timing-function: ease-out; background: $whiteBg;}
+  //   }
+  //   &.blue{background: #1694d2; transition: .5s ease-in-out;}
+  // }
 
   /* update page */
   &.update{
